# Muenchner_Strassen

./: StreetGuesser.md  explore.qgz  explore_adressen.ipynb  explore_strassen.ipynb  explore_strassen_adresse.ipynb  game_utils.py  main.py  pyproject.toml
.github/workflows/: static.yml
.streamlit/: config.toml
exploratory_analysis/: stadtbezirke.ipynb
pages/: Data_Story.py
processed_data/: muenchen_stadtbezirke.geojson  muenchen_stadtbezirke_wgs84.geojson
raw_data/: adressen_aktuell.txt  vablock_stadtbezirk.geojson
storytelling/: index.html
storytelling-main/: config.js
